[package]
name = "eve-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "3.2.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
base64-url = "1.4.13"
urlencoding = "2.1.2"
rand = "0.8.5"
base64 = "0.13.1"
sha2 = "0.10.6"
jsonwebtoken = "8.1.1"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
# reqwest - Disable OpenSSL default implementation and use rustls instead to allow for cross compilation using cross: https://github.com/cross-rs/cross
reqwest = { version = "0.11.12", default-features = false, features = ["blocking", "rustls", "rustls-tls"]}
hmac = "0.12.1"
